# ai_plugin_system

./: CHANGELOG.md  CMakeLists.txt  README.md  env.example
.github/workflows/: codeql.yml  depdiscover.yml
data/reports/: 2026-04-06_Linux_CycloneDx.json  2026-04-06_Linux_depdiscover.html  2026-04-06_Linux_depdiscover.json  2026-04-15_Linux_CycloneDx.json  2026-04-15_Linux_depdiscover.html  2026-04-15_Linux_depdiscover.json  2026-04-15_Linux_depdiscover.md
data/schemas/: embeddings.schema.json  keywords.schema.json  normalization.schema.json  prompt_opt.schema.json  qa.schema.json  sbom_heuristic.schema.json  summarization.schema.json  text_analysis.schema.json  text_optimization.schema.json
docs/architecture/: architecture.md
docs/plugins/: embeddings.md  extraction.md  keywords.md  normalization.md  prompt_optimization.md  qa.md  sbom_heuristic.md  summarization.md  text_analysis.md  text_optimization.md
docs/source_docu/: README.md
docs/source_docu/include/: audit_logger.hpp.md  base_plugin.hpp.md  circuit_breaker.hpp.md  coro_type.hpp.md  curl_multi_manager.hpp.md  env_util.hpp.md  http_awaitable.hpp.md  http_llm_client_type.hpp.md  llm_client_type.hpp.md  plugin_manager.hpp.md  plugin_registry.hpp.md  plugin_type.hpp.md  result_cache.hpp.md  schema_validator_util.hpp.md  session_manager.hpp.md
docs/source_docu/src/: http_llm_client.cpp.md  main.cpp.md  plugin_manager.cpp.md
include/: audit_logger.hpp  base_plugin.hpp  circuit_breaker.hpp  coro_type.hpp  curl_multi_manager.hpp  env_util.hpp  http_awaitable.hpp  http_llm_client_type.hpp  llm_client_type.hpp  plugin_manager.hpp  plugin_registry.hpp  plugin_type.hpp  result_cache.hpp  schema_validator_util.hpp  session_manager.hpp
plugins/embeddings/: embeddings_plugin.cpp
plugins/keywords/: keywords_plugin.cpp
plugins/normalization/: normalization_plugin.cpp
plugins/prompt_opt/: prompt_opt_plugin.cpp
plugins/qa/: qa_plugin.cpp
plugins/sbom_heuristic/: sbom_heuristic_plugin.cpp
plugins/summarization/: summarization_plugin.cpp
plugins/text_analysis/: text_analysis_plugin.cpp
plugins/text_optimization/: text_optimization_plugin.cpp
src/: http_llm_client.cpp  main.cpp  plugin_manager.cpp
